--- a/trunk/App/res/values/strings.xml
+++ b/trunk/App/res/values/strings.xml
@@ -10,4 +10,5 @@
 <string name="noDataEntered">No data was entered to search on...</string>
 <string name="scanResults">Scan Results</string>
 
+<string name="searchingEllipsis">Searching...</string>
 </resources>
