--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -13,13 +13,20 @@
 <string name="searchingEllipsis">Searching...</string>
 <string name="viewStylePage">View Beer Style Page</string>
 <string name="viewProfilePage">View Full Beer Rating Page</string>
-<string name="noUpcResultsFound">Sorry, we weren't able to find any results for that UPC code. If you're up to the task, would you like to make our app better? Please fill out the form below and we'll get you to the ratings for your beer!</string>
+<string name="noUpcResultsFound">Sorry, we weren't able to find any results for that UPC code. If you're up to the task, would you like to make our app better? Please fill out the name of the beer you scanned below!</string>
 <string name="beerNameLabel">Name of beer</string>
 <string name="submit">Submit</string>
 <string name="cancel">Cancel</string>
-<string name="beerNameEntryDescription">(Please be as descriptive as possible. Include the name of the brewery as well. For example: &quot;New Belgium Brewing Fat Tire Ale&quot;</string>
-<string name="beerSizeLabel">Beer Size</string>
-<string name="beer"></string>
-<string name="beerSizeEntryDescription">(Size of scanned beer, e.g. &quot;6 Pack&quot;, &quot;12 oz bottle&quot;, etc)</string>
+<string name="beerNameEntryDescription">(Please be as descriptive as possible. Include the name of the brewery as well. For example: &quot;New Belgium Brewing Fat Tire Ale&quot;)</string>
+
+
+
 <string name="upcCodeNotFound">UPC Code Not Found</string>
+<string name="error_noBarCodeRecieved">Sorry, there must have been some error. No UPC code was recieved after the scan.</string>
+<string name="error_requestFailure">Sorry, the UPC lookup seemed to fail. Either the request couldn't be sent (do you have service?) or the server didn't respond correctly. Please try again later.</string>
+<string name="error_invalidJsonResponse">Sorry, the server responded with something unexpected. Please try again later.</string>
+<string name="error_invalidUpcCode">Error, invalid UPC code scanned.</string>
+<string name="error_noUpcCodeSent">Sorry, there was an error sending the UPC code to the lookup server. Please try again.</string>
+<string name="error_requestTimeout">Sorry, the lookup timed out. We must be getting slammed with people looking for beer. Please try again in a little bit.</string>
+<string name="errorOccured">An Error Has Occured</string>
 </resources>
