--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -13,7 +13,7 @@
 <string name="searchingEllipsis">Searching...</string>
 <string name="viewStylePage">View Beer Style Page</string>
 <string name="viewProfilePage">View Full Beer Rating Page</string>
-<string name="noUpcResultsFound">Sorry, we weren't able to find any results for that UPC code. If you're up to the task, would you like to make our app better? Please fill out the name of the beer you scanned below!</string>
+<string name="noUpcResultsFound">Sorry, we weren't able to find any results for that UPC code. If you are up to the task, would you like to make our app better? Please fill out the name of the beer you scanned below!</string>
 <string name="beerNameLabel">Name of beer</string>
 <string name="submit">Submit</string>
 <string name="cancel">Cancel</string>
