--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -34,4 +34,5 @@
 
 <string name="pleaseFillOutDescription">Please fill out a beer description</string>
 <string name="okLabel">OK</string>
+<string name="error_noDescription">Sorry, there was a problem sending that description to the server.</string>
 </resources>
