--- a/trunk/App/res/values/strings.xml
+++ b/trunk/App/res/values/strings.xml
@@ -13,7 +13,7 @@
 <string name="searchingEllipsis">Searching...</string>
 <string name="viewStylePage">View Beer Style Page</string>
 <string name="viewProfilePage">View Full Beer Rating Page</string>
-<string name="noUpcResultsFound">Sorry, we weren't able to find any results for that UPC code. If you are up to the task, would you like to make our app better? Please fill out the name of the beer you scanned below!</string>
+<string name="noUpcResultsFound">Sorry, we weren\'t able to find any results for that UPC code. If you are up to the task, would you like to make our app better? Please fill out the name of the beer you scanned below!</string>
 <string name="beerNameLabel">Name of beer</string>
 <string name="submit">Submit</string>
 <string name="cancel">Cancel</string>
@@ -23,7 +23,7 @@
 
 <string name="upcCodeNotFound">UPC Code Not Found</string>
 <string name="error_noBarCodeRecieved">Sorry, there must have been some error. No UPC code was recieved after the scan.</string>
-<string name="error_requestFailure">Sorry, the UPC lookup seemed to fail. Either the request couldn't be sent (do you have service?) or the server didn't respond correctly. Please try again later.</string>
+<string name="error_requestFailure">Sorry, the UPC lookup seemed to fail. Either the request couldn\'t be sent (do you have service?) or the server didn\'t respond correctly. Please try again later.</string>
 <string name="error_invalidJsonResponse">Sorry, the server responded with something unexpected. Please try again later.</string>
 <string name="error_invalidUpcCode">Error, invalid UPC code scanned.</string>
 <string name="error_noUpcCodeSent">Sorry, there was an error sending the UPC code to the lookup server. Please try again.</string>
@@ -35,4 +35,5 @@
 <string name="pleaseFillOutDescription">Please fill out a beer description</string>
 <string name="okLabel">OK</string>
 <string name="error_noDescription">Sorry, there was a problem sending that description to the server.</string>
+<string name="incorrectBeer">Not the beer you scanned?</string>
 </resources>
