--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -13,7 +13,7 @@
 <string name="searchingEllipsis">Searching...</string>
 <string name="viewStylePage">View Beer Style Page</string>
 <string name="viewProfilePage">View Full Beer Rating Page</string>
-<string name="noUpcResultsFound">Sorry, we weren\'t able to find any results for that UPC code. If you are up to the task, would you like to make our app better? Please fill out the name of the beer you scanned below!</string>
+<string name="fixExistingEntry">Sorry that wasn\'t the beer you scanned. If you\'d like, you can modify the name we have on file and we\'ll take another crack at it. Maybe be more descriptive than the last guy, unless of course it was you who entered it. In that case, great job! :)</string>
 <string name="beerNameLabel">Name of beer</string>
 <string name="submit">Submit</string>
 <string name="cancel">Cancel</string>
@@ -37,4 +37,7 @@
 <string name="error_noDescription">Sorry, there was a problem sending that description to the server.</string>
 <string name="incorrectBeer">Not the beer you scanned?</string>
 <string name="beerAdvocateAttribution">Ratings courtesy of www.beeradvocate.com</string>
+<string name="noUpcResultsFound">Sorry, we weren\'t able to find any results for that UPC code. If you are up to the task, would you like to make our app better? Please fill out the name of the beer you scanned below!</string>
+<string name="fixExistingEntryTitle">Edit Existing Entry</string>
+<string name="noBeerFoundWithDescription">We found a name for that beer, but we couldn\'t seem to find any ratings for it. The name is entered below. If you tweak the description, we might be able to find the ratings for it.</string>
 </resources>
