--- a/trunk/App/res/values/strings.xml
+++ b/trunk/App/res/values/strings.xml
@@ -40,4 +40,6 @@
 <string name="noUpcResultsFound">Sorry, we weren\'t able to find any results for that UPC code. If you are up to the task, would you like to make our app better? Please fill out the name of the beer you scanned below!</string>
 <string name="fixExistingEntryTitle">Edit Existing Entry</string>
 <string name="noBeerFoundWithDescription">We found a name for that beer, but we couldn\'t seem to find any ratings for it. The name is entered below. If you tweak the description, we might be able to find the ratings for it.</string>
+<string name="ratingsText">w/ %1$s reviews</string>
+
 </resources>
