New feature to allow users to search for a beer by name instead of scanning the beer. Two new intent classes have been added. One to show the search form, and another to show the results of the search. Also added a number of new methods to the ApiHandler class for these requests. Still need to add error handling and probably a bit of code cleanup.

--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -44,4 +44,7 @@
 
 <string name="viewBreweryPage">View Other Beers by %1$s</string>
 <string name="searchBeer">Search for Beer</string>
+<string name="searchForBeer">Search For Beer</string>
+<string name="enterSearchTerm">Enter the name of the beer. This usually works best if you enter the brewery that made it as well.</string>
+<string name="searchResults">Search Results</string>
 </resources>
